Added two ui labels and text views to the first add trip page, however a constraint issue is occurring.

--- a/TrekPack/Storyboard/Base.lproj/Main.storyboard
+++ b/TrekPack/Storyboard/Base.lproj/Main.storyboard
@@ -112,14 +112,15 @@
             </objects>
             <point key="canvasLocation" x="-504" y="482"/>
         </scene>
-        <!--View Controller-->
+        <!--Page1 View Controller-->
         <scene sceneID="1dh-xi-N4x">
             <objects>
-                <viewController storyboardIdentifier="NTPage1" useStoryboardIdentifierAsRestorationIdentifier="YES" id="sHQ-Uk-j7K" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NTPage1" useStoryboardIdentifierAsRestorationIdentifier="YES" id="sHQ-Uk-j7K" customClass="NTPage1ViewController" customModule="TrekPack" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nKl-e5-B45">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="VZD-op-crz"/>
                     </view>
                 </viewController>
@@ -127,14 +128,14 @@
             </objects>
             <point key="canvasLocation" x="-1510" y="-1069"/>
         </scene>
-        <!--View Controller-->
+        <!--Page2 View Controller-->
         <scene sceneID="mKg-av-UQQ">
             <objects>
-                <viewController storyboardIdentifier="NTPage2" useStoryboardIdentifierAsRestorationIdentifier="YES" id="RRa-8t-mv3" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NTPage2" useStoryboardIdentifierAsRestorationIdentifier="YES" id="RRa-8t-mv3" customClass="NTPage2ViewController" customModule="TrekPack" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Nvc-wD-JNg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="qaE-UL-7V3"/>
                     </view>
                 </viewController>
