--- a/TrekPack/Storyboard/Base.lproj/Main.storyboard
+++ b/TrekPack/Storyboard/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15508"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,7 +21,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2844.9275362318845" y="69.642857142857139"/>
+            <point key="canvasLocation" x="2678" y="581"/>
         </scene>
         <!--Third View Controller-->
         <scene sceneID="4J9-Mn-PEh">
@@ -38,42 +37,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H8F-Ec-f1e" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4555.072463768116" y="-927.45535714285711"/>
-        </scene>
-        <!--Swiping Page Controller-->
-        <scene sceneID="5c4-YD-p8D">
-            <objects>
-                <collectionViewController id="3Ig-f5-wP2" customClass="SwipingPageController" customModule="TrekPack" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" id="U97-Si-ke1">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="QGQ-MZ-Rch">
-                            <size key="itemSize" width="50" height="50"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="k6K-1X-p5c" customClass="PageCell" customModule="TrekPack" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="6Ye-OI-CM7">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </collectionViewCellContentView>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="3Ig-f5-wP2" id="Gkr-dW-qpj"/>
-                            <outlet property="delegate" destination="3Ig-f5-wP2" id="91I-eH-V5i"/>
-                        </connections>
-                    </collectionView>
-                    <navigationItem key="navigationItem" id="5Ul-lt-rhS"/>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="m5D-V1-03c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="310.14492753623193" y="-210.26785714285714"/>
+            <point key="canvasLocation" x="4062" y="-210"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -87,7 +51,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="aJu-N8-VQT" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
-                        <segue destination="kVK-j3-pK9" kind="relationship" relationship="viewControllers" id="hKH-bi-ooL"/>
+                        <segue destination="hn3-cg-Zqt" kind="relationship" relationship="viewControllers" id="cnE-XZ-CtC"/>
                         <segue destination="r5X-x0-MYa" kind="relationship" relationship="viewControllers" id="QbX-uA-R7d"/>
                         <segue destination="3zX-0g-d8T" kind="relationship" relationship="viewControllers" id="IOU-Eb-Cwb"/>
                     </connections>
@@ -110,7 +74,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zgi-yB-ZK3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-600" y="481"/>
+            <point key="canvasLocation" x="-600" y="581"/>
         </scene>
         <!--Page1 View Controller-->
         <scene sceneID="1dh-xi-N4x">
@@ -162,7 +126,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DeT-a4-bwA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3755.0724637681164" y="-927.45535714285711"/>
+            <point key="canvasLocation" x="3265" y="-210"/>
         </scene>
         <!--Home-->
         <scene sceneID="lgQ-At-Bq4">
@@ -181,31 +145,13 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F6r-0T-8wg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1886.9565217391305" y="-210.26785714285714"/>
+            <point key="canvasLocation" x="1910" y="581"/>
         </scene>
         <!--New Trip-->
-        <scene sceneID="deM-ng-hYn">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kVK-j3-pK9" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="New Trip" image="plus" catalog="system" id="iKt-bo-dWz"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Iwp-mc-zsr">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="3Ig-f5-wP2" kind="relationship" relationship="rootViewController" id="nCY-0K-NQ6"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2hC-Kh-E05" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-600" y="-210.26785714285714"/>
-        </scene>
-        <!--Navigation Controller-->
         <scene sceneID="hWk-IG-Cru">
             <objects>
-                <navigationController storyboardIdentifier="NV1" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hn3-cg-Zqt" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="NV1" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="hn3-cg-Zqt" customClass="NavigationController" customModule="TrekPack" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="New Trip" image="plus" catalog="system" id="7wQ-Iu-h0y"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EZG-pS-Z0k">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
