--- a/TrekPack/Storyboard/Base.lproj/Main.storyboard
+++ b/TrekPack/Storyboard/Base.lproj/Main.storyboard
@@ -109,14 +109,15 @@
             </objects>
             <point key="canvasLocation" x="310.14492753623193" y="-1069.4196428571429"/>
         </scene>
-        <!--View Controller-->
+        <!--New Trip Page2 View Controller-->
         <scene sceneID="mKg-av-UQQ">
             <objects>
-                <viewController storyboardIdentifier="NTPage2" useStoryboardIdentifierAsRestorationIdentifier="YES" id="RRa-8t-mv3" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NTPage2" useStoryboardIdentifierAsRestorationIdentifier="YES" id="RRa-8t-mv3" customClass="NewTripPage2ViewController" customModule="TrekPack" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Nvc-wD-JNg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="qaE-UL-7V3"/>
                     </view>
                     <navigationItem key="navigationItem" id="cyk-B7-LQ6"/>
@@ -182,10 +183,10 @@
             </objects>
             <point key="canvasLocation" x="-600" y="-1069.4196428571429"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--New Trip Page2 Navigation Controller-->
         <scene sceneID="DUd-9X-pM5">
             <objects>
-                <navigationController storyboardIdentifier="NV2" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="QNf-EZ-AcS" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="NV2" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="QNf-EZ-AcS" customClass="NewTripPage2NavigationController" customModule="TrekPack" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="NEg-Hy-ST7">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -202,9 +203,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="airplane" catalog="system" width="32" height="32"/>
-        <image name="ellipsis.circle" catalog="system" width="32" height="32"/>
+        <image name="airplane" catalog="system" width="64" height="56"/>
+        <image name="ellipsis.circle" catalog="system" width="64" height="60"/>
         <image name="house" catalog="system" width="64" height="54"/>
-        <image name="plus" catalog="system" width="32" height="32"/>
+        <image name="plus" catalog="system" width="64" height="56"/>
     </resources>
 </document>
